optimize plugin controller workflow

--- a/plugins/sample-provider/sample-dataset-class/plugin.yaml
+++ b/plugins/sample-provider/sample-dataset-class/plugin.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: plugin-demo-nginx
+  name: {{ .Name }}
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
       initContainers:
       - name: init-container
         image: curlimages/curl:latest  # 使用 curl 镜像
-        command: ['sh', '-c', 'sleep 10 && curl -X POST -H "Content-Type: application/json" -d "{\"spec\": {\"datasetMetadata\": {\"datasetInfo\": {\"subsets\": [{\"name\": \"fromPlugin\", \"splits\": {\"train\": {\"file\": \"s3://train-by-plugin-sample\"}, \"test\": {\"file\": \"s3://test-by-plugin-sample\"}, \"validate\": {\"file\": \"s3://validate-by-plugin-sample\"}}}]}}}}" {{ .CompleteNotifyUrl }}']
+        command: ['sh', '-c', 'sleep 10 && curl -X POST -H "Content-Type: application/json" -d "[{\"name\": \"{{ .SubsetName }}\", \"splits\": {\"train\": {\"file\": \"{{ .Train }}\"}, \"test\": {\"file\": \"{{ .Test }}\"}, \"validate\": {\"file\": \"{{ .Validate }}\"}}}]}}}}" {{ .CompleteNotifyUrl }}']
       containers:
       - name: nginx
         image: nginx
